Fully migrated to Paper API, output JAR is now Mojang reobfuscated